package dev.fredpena.uml.aggregation;

/**
 * @author me@fredpena.dev
 * @created 11/09/2025  - 10:02
 */
public class Ropa {
    private String color;

    public Ropa(String color) {
        this.color = color;
    }

    public String getColor() {
        return color;
    }
}
