package dev.fredpena.uml.aggregation;

/**
 * @author me@fredpena.dev
 * @created 11/09/2025  - 10:02
 */
public class Sombrero {
    private String tipo;

    public Sombrero(String tipo) {
        this.tipo = tipo;
    }

    public String getTipo() {
        return tipo;
    }
}
